resources/css/index.css
/* ... */
.why__title {
  text-align: center;
}

.why__list {
  padding-left: 2em;
}

.why__btn {
  margin-top: 2em;
  display: block;
  margin-inline: auto;
}

@media (max-width: 1000px) {
  .why__ghost {
    display: none;
  }

  .why__body {
    margin-left: unset;
  }
}

@media (max-width: 850px) {
  /* aka fade-element */
  .why__list li {
    margin-top: 1em;
  }
}

@media (max-width: 500px) {
  .fade-element {
    opacity: 0;
    transition: opacity 2s;
  }

  .fadeIn {
    opacity: 1;
  }

  .why__list {
    padding-left: 0;
  }

  .why__list li {
    list-style-type: none;
  }
}

/****************************************/
/*** who ********************************/
/****************************************/
.who {
  display: flex;
  justify-content: center;
}

.who__img-frame {
  width: 420px;
  flex-shrink: 0;
  position: relative;
}

.who__img {
  position: absolute;
  transform: translateY(-55%);
  width: 100%;
}

.who__body {
  max-width: 785px;
  margin-left: 5em;
  padding: 4em 0 6em;
}

.who__title {
  text-align: center;
}

@media (max-width: 1000px) {
  .who__img-frame {
    display: none;
  }

  .who__body {
    margin-left: unset;
  }
}

/****************************************/
/*** maximize exposure ******************/
/****************************************/
.exposure {
  display: flex;
  align-items: center;
  justify-content: center;
}

.exposure__body {
  width: 50%;
  max-width: 700px;
  padding-right: 2em;
}

.exposure__img-frame {
  width: 40%;
}

.exposure__img {
  width: 100%;
  max-width: 420px;
  display: block;
  margin-inline: auto;
}

@media (max-width: 850px) {
  .exposure {
    flex-direction: column;
  }

  .exposure__body {
    width: 100%;
    padding-right: unset;
  }

  .exposure__title {
    text-align: center;
  }

  .exposure__img-frame {
    order: -1;
    width: 100%;
    margin-bottom: 2em;
  }
}

/****************************************/
/*** measuring success ******************/
/****************************************/
.success {
  margin-inline: auto;
  margin-bottom: 100px;
  display: flex;
}

.success__ghost {
  width: 50%;
  /* background image lazy loaded from javascript */
  /* background-image: url(../images/work_squoosh.jpg); */
  background-color: #9c9c9c;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.success__body {
  width: 30%;
  max-width: 750px;
  padding: 4em 0;
  padding-left: 6em;
}

@media (max-width: 850px) {
  .success {
    flex-direction: column;
  }

  .success__ghost {
    width: 100%;
    height: 30vh;
  }

  .success__body {
    padding: 4em 2em;
    width: unset;
  }
}

/****************************************/
/*** why work with statStory ************/
/****************************************/
.why2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.why2__body {
  width: 50%;
  max-width: 800px;
  padding-right: 2em;
}

.why2__title {
  width: 70%;
  margin-inline: auto;
  text-align: center;
}

.why2__list li {
  margin-bottom: 1em;
}

.why2__body2 {
  width: 50%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.why2__img {
  width: 100%;
  max-width: 500px;
}

.why2__btn {
  margin-top: 4em;
}

@media (max-width: 850px) {
  .why2 {
    flex-direction: column;
  }

  .why2__body {
    width: 100%;
    padding-right: unset;
  }

  .why2__title {
    width: 100%;
    margin-top: 0;
  }

  .why2__body2 {
    width: 80%;
    margin-top: 2em;
  }
}

@media (max-width: 500px) {
  .why2__title {
    text-align: unset;
  }

  .why2__list {
    padding-left: 0;
  }

  .why2__list li {
    list-style: none;
  }
}

/****************************************/
/*** case studies carousel **************/
/****************************************/
:root {
  --cstud-height: 700px;
  --cstud-mobile-height: 600px;
  --diagnol-angle: 3;
}

.cstud__outer {
  position: relative;
  z-index: 0;
  height: var(--cstud-height);
}

.cstud__filler {
  position: absolute;
  z-index: -1;
  left: 50%;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: white;
}

.cstud__diagnol {
  position: absolute;
  z-index: -1;
  top: 0;
  right: 50%;
  border-right: calc(var(--cstud-height) / var(--diagnol-angle)) solid white;
  border-top: var(--cstud-height) solid #244aa300;
}

.cstud__inner {
  height: var(--cstud-height);
  display: flex;
  justify-content: space-between;
}

.cstud__body {
  width: 50%;
  height: 50%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.cstud__title {
  font-size: 3rem;
  color: white;
  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
}

.cstud__carousel {
  width: 50%;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.cstud__prev,
.cstud__next {
  width: 0;
  height: 0;
  border-top: 20px solid transparent;
  border-bottom: 20px solid transparent;
  cursor: pointer;
}

.cstud__prev {
  border-right: 25px solid var(--background-blue);
}
.cstud__next {
  border-left: 25px solid var(--background-blue);
}

@media (max-width: 350px) {
  .cstud__prev,
  .cstud__next {
    display: none;
  }
}

.cstud__prev:hover {
  border-right: 25px solid #005cc5;
}
.cstud__next:hover {
  border-left: 25px solid #005cc5;
}

.cstud__item {
  display: none;
  flex-shrink: 0;
  position: relative;
  height: 600px;
  width: 300px;
  color: black;
  background-image: url(../images/phone.png);
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  animation: slideIn 1s ease-out 1ms;
}

@keyframes slideIn {
  0% {
    opacity: 0;
    transform: translateX(50%);
  }

  100% {
    opacity: 1;
    transform: translateX(0%);
  }
}

.visible {
  display: initial;
}

.cstud__person,
.cstud__subscribers,
.cstud__views,
.cstud__leads {
  position: absolute;
  font-size: 1.2rem;
  font-weight: 600;
  font-family: "Nunito", sans-serif;
}
/* ... */

